--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body {
 
 .basic {
     height: calc(100% - 50px);
-    width: 345px;
+    width: 360px;
     float: right;
     text-align: left;
 }
@@ -128,6 +128,7 @@ footer {
 }
 
 .button {
+    cursor: pointer;
     border: none;
     padding: 10px 30px 10px 30px;
 }
