--- a/css/styles.css
+++ b/css/styles.css
@@ -22,21 +22,27 @@
     top: 0px;
     right: 0px;
 }
-/**** DISABLES DRAG ****/
-.noTouch, .noTouch::after, .noTouch::before {
-    -webkit-user-select: none;
-    -webkit-user-drag: none;
-    -webkit-app-region: no-drag;
-    cursor: default;
-}
 
 #close-button {
+    float: right;
     padding: 10px;
     cursor: pointer;
 }
+
 #close-button:hover {
+    background: rgba(255, 0, 0, 0.75);
+}
+
+#minimize-button {
+    float: right;
+    padding: 10px;
+    cursor: pointer;
+}
+
+#minimize-button:hover {
     background: rgba(255, 255, 255, 0.15);
 }
+
 
 html, body {
     height: 100%;
@@ -203,4 +209,38 @@ footer {
     color: white;
     font-family: Lucida Console, Lucida Sans Typewriter, monaco, Bitstream Vera Sans Mono, monospace;
     font-size: 12px;
+}
+
+.loading:after {
+    content: ' .';
+    animation: dots 1s steps(5, end) infinite;
+}
+
+@keyframes dots {
+    0%, 20% {
+        color: rgba(0, 0, 0, 0);
+        text-shadow: .25em 0 0 rgba(0, 0, 0, 0),
+        .5em 0 0 rgba(0, 0, 0, 0);
+    }
+    40% {
+        color: white;
+        text-shadow: .25em 0 0 rgba(0, 0, 0, 0),
+        .5em 0 0 rgba(0, 0, 0, 0);
+    }
+    60% {
+        text-shadow: .25em 0 0 white,
+        .5em 0 0 rgba(0, 0, 0, 0);
+    }
+    80%, 100% {
+        text-shadow: .25em 0 0 white,
+        .5em 0 0 white;
+    }
+}
+
+/**** DISABLES DRAG ****/
+.noTouch, .noTouch::after, .noTouch::before {
+    -webkit-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-app-region: no-drag;
+    cursor: default;
 }
