--- a/css/styles.css
+++ b/css/styles.css
@@ -101,12 +101,15 @@ h1 {
 .limitTwo {
     height: 2em;
     line-height: 1em;
+    word-wrap: break-word;
     overflow: hidden;
 }
 
 .limitThree {
     max-height: 3em;
     line-height: 1em;
+    word-wrap: break-word;
+    width: 340px;
     overflow: hidden;
 }
 
