--- a/css/styles.css
+++ b/css/styles.css
@@ -248,17 +248,17 @@ footer {
     cursor: default;
 }
 
-/*Updstes*/
-#notification {
-    position: fixed;
-    bottom: 20px;
-    left: 20px;
-    width: 200px;
-    padding: 20px;
-    border-radius: 5px;
-    background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+/**** AUTO UPDATES ****/
+.updateDownload {
+    float: left; padding: 5px;
+}
+.updateRestart {
+    cursor: pointer; float: left; padding: 5px;
+}
+.updateRestart:hover {
+    background-color: #404040;
 }
 .hidden {
     display: none;
 }
+
